--- a/camping.html
+++ b/camping.html
@@ -12,8 +12,8 @@
  <div class="containera">
 
         <div id ="navbar1">
-        <a href="/lego.html">lego</a>
-        <a href="/index.html">home</a>
+        <a href="lego.html">lego</a>
+        <a href="index.html">home</a>
         </div>
         <h1 id="headcamp1">Camping The night Away</h1>
         </div>
